test(seasons): add Vitest unit tests for season feature
- Install vitest, jsdom, and @vitest/coverage-v8
- Add test target to angular.json
- Create vitest.config.ts configuration
- Create test-setup.ts with global mocks
- Add model tests (season.model.spec.ts)
- Add service tests (season-store.service.spec.ts)
- Add component tests (list, detail, create, edit)
- Update package.json with test scripts

--- a/angular.json
+++ b/angular.json
@@ -129,6 +129,12 @@
           "options": {
             "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
+        },
+        "test": {
+          "builder": "@angular/build:unit-test",
+          "options": {
+            "tsConfig": "tsconfig.spec.json"
+          }
         }
       }
     }
