docs(tests): add Vitest hybrid testing setup
- Create vitest.config.browser.ts for component tests (Happy-DOM)
- Add test:browser script to package.json
- Document hybrid testing approach in AGENTS.md

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "test:unit": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:browser": "vitest run --config vitest.config.browser.ts"
   },
   "prettier": {
     "printWidth": 100,
