--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,8 @@
             "styles": [
               "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
               "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
-              "src/styles.less"
+              "src/styles.less",
+              "src/app/styles.less"
             ]
           },
           "configurations": {
