--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,9 @@
         "@taiga-ui/core",
         "@taiga-ui/kit",
         "@taiga-ui/cdk",
-        "@taiga-ui/i18n"
+        "@taiga-ui/i18n",
+        "@taiga-ui/addon-table",
+        "@taiga-ui/addon-mobile"
       ],
       "schematics": {
         "@schematics/angular:component": {
@@ -67,6 +69,7 @@
             "styles": [
               "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
               "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
+              "node_modules/@taiga-ui/addon-mobile/styles/taiga-ui-mobile.less",
               "src/styles.less",
               "src/app/styles.less"
             ]
