--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@taiga-ui/addon-mobile": "^4.66.0",
+    "@taiga-ui/addon-table": "^4.66.0",
     "@taiga-ui/cdk": "^4.66.0",
     "@taiga-ui/core": "^4.66.0",
     "@taiga-ui/icons": "^4.66.0",
