--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@taiga-ui/addon-table": "^4.66.0",
     "@taiga-ui/cdk": "^4.66.0",
     "@taiga-ui/core": "^4.66.0",
+    "@taiga-ui/event-plugins": "^5.0.0",
     "@taiga-ui/icons": "^4.66.0",
     "@taiga-ui/kit": "^4.66.0",
     "rxjs": "~7.8.0",
