--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@angular/build": "^21.0.4",
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.0",
+    "@angular/language-service": "^21.0.6",
     "@eslint/js": "^9.39.2",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
@@ -61,6 +62,7 @@
     "eslint": "^9.39.2",
     "jsdom": "^27.4.0",
     "less": "^4.2.0",
+    "or": "^0.2.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.16"
   }
