feat(STAF-133): add Playwright visual tests for Sports, Tournaments, Persons pages
- Install Playwright and configure visual testing
- Create sports.spec.ts with 5 test cases (list/detail desktop/mobile/tablet)
- Create tournaments.spec.ts with 5 test cases (list/create/detail desktop/mobile)
- Create persons.spec.ts with 3 test cases (list desktop/tablet/mobile)
- Add npm scripts for visual testing (test:visual, test:visual:ui, test:visual:report)
- Configure multi-browser testing (Chrome, Firefox, Safari, Mobile)
- Add Playwright artifacts to .gitignore

Resolves STAF-133

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@ __screenshots__
 CLAUDE.md
 refactor.md
 
+
+# Playwright
+/test-results/
+/playwright-report/
+/playwright/.cache/
+/**/*.spec.ts-snapshots/
