--- a/package.json
+++ b/package.json
@@ -38,20 +38,22 @@
   "private": true,
   "packageManager": "npm@10.9.2",
   "dependencies": {
-    "@angular/common": "^21.0.7",
-    "@angular/compiler": "^21.0.7",
-    "@angular/core": "^21.0.7",
-    "@angular/forms": "^21.0.7",
-    "@angular/platform-browser": "^21.0.7",
-    "@angular/router": "^21.0.7",
+    "@angular/animations": "^21.1.1",
+    "@angular/common": "^21.1.1",
+    "@angular/compiler": "^21.1.1",
+    "@angular/core": "^21.1.1",
+    "@angular/forms": "^21.1.1",
+    "@angular/platform-browser": "^21.1.1",
+    "@angular/router": "^21.1.1",
     "@taiga-ui/addon-mobile": "^4.66.0",
     "@taiga-ui/addon-table": "^4.66.0",
-    "@taiga-ui/cdk": "^4.66.0",
-    "@taiga-ui/core": "^4.66.0",
+    "@taiga-ui/cdk": "^4.67.0",
+    "@taiga-ui/core": "^4.67.0",
     "@taiga-ui/event-plugins": "^4.7.0",
-    "@taiga-ui/icons": "^4.66.0",
-    "@taiga-ui/kit": "^4.66.0",
+    "@taiga-ui/icons": "^4.67.0",
+    "@taiga-ui/kit": "^4.67.0",
     "@taiga-ui/layout": "^4.66.0",
+    "@taiga-ui/polymorpheus": "^4.9.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -62,10 +64,10 @@
     "@angular-eslint/schematics": "^21.1.0",
     "@angular-eslint/template-parser": "^21.1.0",
     "@angular-eslint/utils": "^21.1.0",
-    "@angular/build": "^21.0.4",
-    "@angular/cli": "^21.0.4",
-    "@angular/compiler-cli": "^21.0.7",
-    "@angular/language-service": "^21.0.6",
+    "@angular/build": "^21.1.0",
+    "@angular/cli": "^21.1.0",
+    "@angular/compiler-cli": "^21.1.1",
+    "@angular/language-service": "^21.1.1",
     "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.3",
