--- a/package.json
+++ b/package.json
@@ -39,21 +39,34 @@
   "packageManager": "npm@10.9.2",
   "dependencies": {
     "@angular/animations": "^21.1.1",
+    "@angular/cdk": "^21.1.1",
     "@angular/common": "^21.1.1",
     "@angular/compiler": "^21.1.1",
     "@angular/core": "^21.1.1",
     "@angular/forms": "^21.1.1",
     "@angular/platform-browser": "^21.1.1",
     "@angular/router": "^21.1.1",
+    "@maskito/angular": "^5.1.0",
+    "@maskito/core": "^5.1.0",
+    "@maskito/kit": "^5.1.0",
+    "@maskito/phone": "^5.1.0",
+    "@ng-web-apis/common": "^4.14.0",
+    "@ng-web-apis/intersection-observer": "^4.14.0",
+    "@ng-web-apis/mutation-observer": "^4.14.0",
+    "@ng-web-apis/platform": "^4.14.0",
+    "@ng-web-apis/resize-observer": "^4.14.0",
+    "@ng-web-apis/screen-orientation": "^4.14.0",
     "@taiga-ui/addon-mobile": "^4.66.0",
     "@taiga-ui/addon-table": "^4.66.0",
     "@taiga-ui/cdk": "^4.67.0",
     "@taiga-ui/core": "^4.67.0",
     "@taiga-ui/event-plugins": "^4.7.0",
+    "@taiga-ui/i18n": "^4.67.0",
     "@taiga-ui/icons": "^4.67.0",
     "@taiga-ui/kit": "^4.67.0",
     "@taiga-ui/layout": "^4.66.0",
     "@taiga-ui/polymorpheus": "^4.9.0",
+    "libphonenumber-js": "^1.12.35",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -81,5 +94,10 @@
     "or": "^0.2.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.16"
+  },
+  "overrides": {
+    "@taiga-ui/kit": {
+      "@maskito/core": "^5.1.0"
+    }
   }
 }
