--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@taiga-ui/layout": "^4.66.0",
     "@taiga-ui/polymorpheus": "^4.9.0",
     "libphonenumber-js": "^1.12.35",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -84,6 +85,7 @@
     "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.3",
+    "@types/qrcode": "^1.5.6",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
     "@vitest/coverage-v8": "^4.0.16",
