--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,8 @@
               "@taiga-ui/cdk",
               "@taiga-ui/i18n",
               "@taiga-ui/addon-table",
-              "@taiga-ui/addon-mobile"
+              "@taiga-ui/addon-mobile",
+              "qrcode"
             ],
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
@@ -95,8 +96,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "10KB",
-                  "maximumError": "20KB"
+                  "maximumWarning": "15KB",
+                  "maximumError": "25KB"
                 }
               ],
               "outputHashing": "all"
@@ -110,8 +111,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "10KB",
-                  "maximumError": "20KB"
+                  "maximumWarning": "15KB",
+                  "maximumError": "25KB"
                 }
               ],
               "outputHashing": "all"
@@ -123,6 +124,11 @@
                   "with": "src/environments/environment.dev.ts"
                 }
               ],
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            },
+            "local": {
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
@@ -141,9 +147,12 @@
             },
             "development": {
               "buildTarget": "frontend-angular-signals:build:development"
+            },
+            "local": {
+              "buildTarget": "frontend-angular-signals:build:local"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "local"
         },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
