--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build-and-push:
     runs-on: arc-runner-set
+    container:
+      image: gcr.io/kaniko-project/executor:latest
 
     steps:
     - name: Checkout code
@@ -22,34 +24,29 @@ jobs:
         echo "tag=$TAG" >> $GITHUB_OUTPUT
         echo "Git tag: $TAG"
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Configure Docker Hub credentials
+      run: |
+        mkdir -p /kaniko/.docker
+        echo '{"auths":{"https://index.docker.io/v1/":{"auth":"'$(echo -n "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_TOKEN }}" | base64 -w0)'"}}}' > /kaniko/.docker/config.json
 
     - name: Build and push Docker image (production)
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        build-args: BUILD_CONFIG=production
-        tags: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:latest
-          ${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:${{ steps.get_tag.outputs.tag }}
-          ${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:prod
-        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:buildcache
-        cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:buildcache,mode=max
+      run: |
+        /kaniko/executor \
+          --dockerfile=Dockerfile \
+          --context=. \
+          --destination=${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:latest \
+          --destination=${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:${{ steps.get_tag.outputs.tag }} \
+          --destination=${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:prod \
+          --build-arg BUILD_CONFIG=production \
+          --cache=true \
+          --cache-repo=${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:buildcache
 
     - name: Build and push Docker image (development)
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        build-args: BUILD_CONFIG=development
-        tags: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:dev
-        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:buildcache
+      run: |
+        /kaniko/executor \
+          --dockerfile=Dockerfile \
+          --context=. \
+          --destination=${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:dev \
+          --build-arg BUILD_CONFIG=development \
+          --cache=true \
+          --cache-repo=${{ secrets.DOCKERHUB_USERNAME }}/statsboards-frontend:buildcache
