--- a/angular.json
+++ b/angular.json
@@ -128,6 +128,18 @@
               "extractLicenses": false,
               "sourceMap": true
             },
+            "k8s": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.k8s.ts"
+                }
+              ],
+              "optimization": true,
+              "extractLicenses": true,
+              "sourceMap": false,
+              "outputHashing": "all"
+            },
             "local": {
               "optimization": false,
               "extractLicenses": false,
