--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,7 @@
+upstream backend {
+    server statsboards-backend-svc:9000;
+}
+
 server {
     listen 8383;
     server_name localhost;
@@ -20,7 +24,51 @@ server {
         image/svg+xml;
     gzip_comp_level 6;
 
-    # Cache static assets
+    # Proxy API requests to backend
+    location /api/ {
+        proxy_pass http://backend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
+    }
+
+    # Proxy health check to backend
+    location = /health {
+        proxy_pass http://backend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 5s;
+    }
+
+    # Proxy WebSocket connections to backend
+    location /ws/ {
+        proxy_pass http://backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    # Proxy static files (uploads) to backend
+    location /static/ {
+        proxy_pass http://backend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_connect_timeout 10s;
+        proxy_read_timeout 30s;
+    }
+
+    # Cache static assets (frontend)
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         root /usr/share/nginx/html;
         expires 1y;
@@ -34,7 +82,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Health check endpoint
+    # Health check endpoint (frontend nginx)
     location = /front-nginx-health {
         add_header Content-Type application/json;
         add_header Content-Disposition inline;
